# system-zoo

./: README.md
compiler/c_compiler/: README.md  requirements.txt
compiler/c_compiler/examples/: hello.c
concurency/thread_job_queue/: Makefile  README.md  main.c  task.h  task_queue.c  task_queue.h  thread_pool.c  thread_pool.h
concurrent-mini-shell/: Makefile  README.md  input_handler.c  job_control.c  main.c  shell.h
cpu/ARM7-CPU/: README.md
cpu/ARM7-CPU/rtl/: top.v
cpu/assembler/: README.md  __init__.py  __main__.py  assembler.py  disassembler.py  example.s  example_advanced.s  instruction.py  parser.py  test_assembler.py
interpreter_python/: run.py
interpreter_python/ast/: ast.py
interpreter_python/lexer/: lexer.py
interpreter_python/monkey_token/: keywords.py  token.py  token_type.py
interpreter_python/parser/: parser.py
interpreter_python/repl/: repl.py
interpreter_python/tests/: test_let_statements.py  test_lexer.py
linux-container/: Makefile  project_specs.md
linux-container/include/: cgroup.h  container.h  filesystem.h  namespace.h
linux-container/src/: cgroup.c  container.c  filesystem.c  main.c  namespace.c
memory-manager/: CMakeLists.txt  README.md  memory_manager.c  memory_manager.h  test_memory_manager.c
mips-assembler/: README.md  cli.py  setup.py  test.txt
mips-assembler/examples/: fibonacci.asm
mips-assembler/mips_assembler/: encoder.py  lexer.py  parser.py
mips-assembler/tests/: test_lexer.py
packet-sniffer/: Makefile  README.md  project_reqs.md
packet-sniffer/src/: main.c  packet_sniffer.c  packet_sniffer.h
(+37 files in other folders)
